use unmodifiable list instead of copying where applicable